# MuseAid

./: .gitignore  README.md  build.ps1  clean.ps1  makefile  message (4).txt  start.ps1  stop.ps1  template.env
App/plans/: architecture.md
Composition_App/: README.md  pyproject.toml
Composition_App/examples/: Amazing_Grace.json  Blinding_Lights.json  asdfasfdMegalovania_-_Opening_Riff.json  c_major_scale.json  megalovania_inspired.json
Composition_App/src/music_app/: __init__.py  app.py  audio_engine.py  commands.py  dbUtil.py  generate_samples.py  main.py  midi_support.py  models.py  server_client.py  staff_widget.py
ElevenL/: example_response.json
ElevenL n gem/py/: STT.py  TODO.md  TTS.py  example.py  gem.py  mongo.py  speech_to_server.py
ElevenL/py/: TTS.py  example.py  speech_to_server.py  unnamed.py
hand-gesture-app/: ARCHITECTURE.md  Dockerfile  README.docker.md  README.md  VULTR_DEPLOYMENT.md  docker-compose.yml  example-output.md  pyproject.toml  requirements.txt  test_camera.py
hand-gesture-app/src/: config.py  ffmpeg_pipe.py  finger_state.py  gesture_detector.py  hand_tracker.py  http_poller.py  main.py  mjpeg_client.py  mjpeg_server.py  motion_buffer.py  overlay.py
server/: pyproject.toml
server/src/museaid_server/: __init__.py  editor.py  main.py  models.py  state.py
server/src/museaid_server/routes/: __init__.py  gestures.py  sequence.py  speech.py  ws.py
server/src/museaid_server/services/: __init__.py  gemini.py  gesture_map.py
video-streaming/: pyproject.toml
