[project]
name = "music-app"
version = "0.1.0"
description = "A music production app with treble clef staff notation display"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.6",
    "pygame>=2.5",
    "numpy>=1.26",
    "scipy>=1.12",
    "mido>=1.3",
    "websockets>=14.0",
    "python-dotenv>=1.0",
    "pymongo>=4.0",
]

[project.scripts]
music-app = "music_app.main:main"
generate-samples = "music_app.generate_samples:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/music_app"]
