[project]
name = "hand-gesture-app"
version = "0.1.0"
description = "Real-time hand gesture recognition using OpenCV and MediaPipe"
requires-python = ">=3.10"
dependencies = [
    "opencv-python",
    "mediapipe",
    "numpy",
]

[project.scripts]
hand-gesture = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
