[project]
name = "museaid-server"
version = "0.1.0"
description = "MuseAid HTTP coordination server — connects gesture, speech, and composition apps"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "google-genai>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "uvicorn[standard]>=0.34",
    "websockets>=14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/museaid_server"]
